# electricity-prices-app

./: .dockerignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  config.py  main.py  pyproject.toml
backend/apps/: schemas.py
backend/apps/routers/: prices.py
backend/apps/services/: prices.py
backend/tests/: conftest.py
backend/tests/unit/: test_prices_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: DatePicker.tsx  DaySummaryTable.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  PriceChart.tsx
frontend/src/types/: api.ts
frontend/src/utils/: dateUtils.ts
